Resolves: tdf#117475 page properties change triggers page reorder event

and page reorder remove and re-inserts the slide in the slide sorter, so the
selected page property is removed when the page doesn't really get removed. So
then there's no selection to apply the later master page property to.

Change-Id: I4a32958542da1bf2f5041dde0294a772645e30ad